Project compiles now

--- a/src/mike_av_stack_localization/package.xml
+++ b/src/mike_av_stack_localization/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mike_av_stack</name>
+  <name>mike_av_stack_localization</name>
   <version>0.0.1</version>
   <description>Michael's autonomous vehicle stack built on top of carla ros bridge</description>
 
@@ -59,46 +59,41 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend> -->
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roslaunch</build_depend>
-  <build_depend>roscpp</build_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <build_depend>tf2_geometry_msgs</build_depend>
-  <build_depend>cmake_modules</build_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>pcl_ros</exec_depend>
-  <exec_depend>pcl_conversions</exec_depend>
-  <exec_depend>tf2_geometry_msgs</exec_depend>
-  <exec_depend>cmake_modules</exec_depend>
+  <!-- <build_depend>roslaunch</build_depend> -->
+  <depend>rclcpp</depend>
+  <!-- <depend>std_msgs</depend> -->
+  <depend>sensor_msgs</depend>
+  <depend>pcl_ros</depend>
+  <depend>pcl_conversions</depend>
+  <!-- <depend>libpcl-all</depend> -->
+  <depend>tf2_geometry_msgs</depend>
+  <!-- <depend>cmake_modules</depend> -->
 
 
   <!-- Python dependancies -->
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>numpy</exec_depend>
-  <exec_depend>carla_ros_bridge</exec_depend>
-  <exec_depend>carla_ego_vehicle</exec_depend>
-  <exec_depend>carla_manual_control</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>vision_msgs</exec_depend>
-  <exec_depend>tf</exec_depend>
-  <exec_depend>tf2</exec_depend>
-  <exec_depend>ros_numpy</exec_depend>
-  <exec_depend>cv2</exec_depend>
-  <exec_depend>torch</exec_depend>
-  <exec_depend>open3d</exec_depend>
-  <exec_depend>time</exec_depend>
-  <exec_depend>easydict</exec_depend>
-  <exec_depend>os</exec_depend>
-  <exec_depend>sys</exec_depend>
+  <!-- <depend>rosidl_default_runtime</depend>
+  <depend>rospy</depend>
+  <depend>numpy</depend>
+  <depend>carla_ros_bridge</depend>
+  <depend>carla_ego_vehicle</depend>
+  <depend>carla_manual_control</depend>
+  <depend>vision_msgs</depend>
+  <depend>tf</depend>
+  <depend>tf2</depend>
+  <depend>ros_numpy</depend>
+  <depend>cv2</depend>
+  <depend>torch</depend>
+  <depend>open3d</depend>
+  <depend>time</depend>
+  <depend>easydict</depend>
+  <depend>os</depend>
+  <depend>sys</depend> -->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
